Improving training loop with num_workers=max(cpus)

--- a/notebooks/lstm_model.ipynb
+++ b/notebooks/lstm_model.ipynb
@@ -1405,14 +1405,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "405572"
-      ]
-     },
-     "execution_count": 91,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'X_train' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[98]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Liberar memoria de las variables originales\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mdel\u001b[39;00m \u001b[43mX_train\u001b[49m, y_train, X_val, y_val\u001b[38;5;66;03m#, X_test, y_test, df, X_temp, y_temp\u001b[39;00m\n\u001b[32m      3\u001b[39m gc.collect()\n",
+      "\u001b[31mNameError\u001b[39m: name 'X_train' is not defined"
+     ]
     }
    ],
    "source": [
@@ -1423,7 +1424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 99,
    "id": "7db982ae",
    "metadata": {},
    "outputs": [],
@@ -1445,8 +1446,14 @@
     "train_dataset = TensorDataset(X_train_tensor, y_train_tensor)\n",
     "val_dataset = TensorDataset(X_val_tensor, y_val_tensor)\n",
     "\n",
-    "train_loader = DataLoader(train_dataset, batch_size=64, shuffle=True)\n",
-    "val_loader = DataLoader(val_dataset, batch_size=64, shuffle=False)"
+    "\n",
+    "num_workers = os.cpu_count()  # Usa todos los núcleos disponibles\n",
+    "\n",
+    "train_loader = DataLoader(train_dataset, batch_size=64, shuffle=True, num_workers=num_workers)\n",
+    "val_loader = DataLoader(val_dataset, batch_size=64, shuffle=False, num_workers=num_workers)\n",
+    "\n",
+    "#train_loader = DataLoader(train_dataset, batch_size=64, shuffle=True)\n",
+    "#val_loader = DataLoader(val_dataset, batch_size=64, shuffle=False)"
    ]
   },
   {
@@ -1460,7 +1467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 100,
    "id": "3395b687",
    "metadata": {},
    "outputs": [],
